--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,25 @@
     <artifactId>1.0</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+        <!-- Spring framework -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>2.5.6</version>
+        </dependency>
+
+        <!-- MySQL database driver -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.9</version>
+        </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.8.3</version>
-            <scope>test</scope>
         </dependency>
-    </dependencies>
 
+    </dependencies>
 
 </project>
